--- a/retro_space_calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro_space_calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,8 +17,58 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="jTy-Oi-zdR">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="jTy-Oi-zdR" secondAttribute="height" multiplier="1:1" id="mWo-MA-YLk"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="9rx-Yd-m1K">
+                                <rect key="frame" x="0.0" y="472" width="600" height="128"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="TLp-HF-yO5"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Sqo-7e-Lfy">
+                                <rect key="frame" x="157" y="20" width="300" height="336"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="4bd-Mn-ZbU">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="98"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="P36-Mc-gBF"/>
+                                            <constraint firstAttribute="height" constant="98" id="vg1-oe-bcO"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="898-2g-Smp">
+                                        <rect key="frame" x="0.0" y="148" width="300" height="188"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="300" id="PvJ-38-cZm"/>
+                                            <constraint firstAttribute="height" constant="188" id="oeb-GI-Rd2"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <animations/>
+                            </stackView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jTy-Oi-zdR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="AUc-yw-k2z"/>
+                            <constraint firstItem="Sqo-7e-Lfy" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="BGf-jc-svK"/>
+                            <constraint firstItem="Sqo-7e-Lfy" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ga4-uR-u26"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="jTy-Oi-zdR" secondAttribute="bottom" id="PuQ-B8-Z8H"/>
+                            <constraint firstAttribute="trailing" secondItem="9rx-Yd-m1K" secondAttribute="trailing" id="aIJ-WG-fJx"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="9rx-Yd-m1K" secondAttribute="bottom" id="cdS-XI-ugF"/>
+                            <constraint firstAttribute="trailing" secondItem="jTy-Oi-zdR" secondAttribute="trailing" id="fVb-dZ-zP8"/>
+                            <constraint firstItem="Sqo-7e-Lfy" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="10" id="lut-LO-4LZ"/>
+                            <constraint firstItem="9rx-Yd-m1K" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="nLg-9f-OfV"/>
+                            <constraint firstItem="jTy-Oi-zdR" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="z8z-Eg-A3J"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +76,10 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
