Added variables onto clear button

--- a/retro_space_calculator/Base.lproj/Main.storyboard
+++ b/retro_space_calculator/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                                                     <action selector="numberPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rBa-9E-GWu"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNg-Ht-k9n">
+                                            <button opaque="NO" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TNg-Ht-k9n">
                                                 <rect key="frame" x="152" y="0.0" width="61" height="63"/>
                                                 <animations/>
                                                 <constraints>
